<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="CarFragment">

    <!-- Content for the main part of the screen -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="600dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout_horizontal_car"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblCarId_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/lblCarId_textView"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lblCarModel_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/lblCarModel_textView"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lblCarMake_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/lblCarMake_textView"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lblCarFeePerDay_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/lblCarFeePerDay_textView"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lblCarAddress_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/lblCarAddress_textView"
                    android:textSize="16sp" />
<!--                <TextView
                    android:id="@+id/lblCarAvailable_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/lblCarAvailable_textView"
                    android:textSize="16sp" />-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/carId_editText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/carId_editText" />

                <EditText
                    android:id="@+id/carModel_editText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/carModel_editText" />

                <EditText
                    android:id="@+id/carMake_editText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/carMake_editText" />

                <EditText
                    android:id="@+id/carFeePerDay_editText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/carFeePerDay_editText" />

                <Spinner
                    android:id="@+id/carAddress_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/carAddress_spinner" />

                <!--<Spinner
                    android:id="@+id/carAvailable_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/carAvailable_spinner" />-->

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/updateCar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateCar_button"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout_horizontal_car"
            app:layout_constraintStart_toStartOf="@+id/linearLayout_horizontal_car"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_horizontal_car" />

        <Button
            android:id="@+id/deleteCar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteCar_button"
            app:layout_constraintEnd_toEndOf="@+id/updateCar_button"
            app:layout_constraintStart_toStartOf="@+id/updateCar_button"
            app:layout_constraintTop_toBottomOf="@+id/updateCar_button" />

        <Button
            android:id="@+id/addCar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addCar_button"
            app:layout_constraintEnd_toEndOf="@+id/deleteCar_button"
            app:layout_constraintStart_toStartOf="@+id/deleteCar_button"
            app:layout_constraintTop_toBottomOf="@+id/deleteCar_button" />

        <ScrollView
            android:id="@+id/carList_scrollView"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/deleteCar_button"
            app:layout_constraintStart_toStartOf="@+id/deleteCar_button"
            app:layout_constraintTop_toBottomOf="@+id/deleteCar_button">

            <TextView
                android:id="@+id/carData_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carData_textView" />
        </ScrollView>
    </LinearLayout>


</FrameLayout>
